Fix a bug in the regex

--- a/Can we generate problems randomly?.ipynb
+++ b/Can we generate problems randomly?.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "nr_page_downs = 10\n",
     "while nr_page_downs:\n",
-    "    time.sleep(0.5)\n",
+    "    time.sleep(2)\n",
     "    elem.send_keys(Keys.PAGE_DOWN)\n",
     "    nr_page_downs -= 1"
    ]
@@ -105,7 +105,6 @@
       "Project Euler 129, 269, and 396\n",
       "Project Euler 61, 264 and 511\n",
       "Project Euler 41, 227 and 449\n",
-      "Project Euler 41, 227 and 449\n",
       "Project Euler 82, 181 and 367\n",
       "Project Euler 116, 430 and 613\n",
       "Project Euler 24, 286 and 299\n",
@@ -120,15 +119,14 @@
       "Project Euler 91, 208 and 312\n",
       "Project Euler 44, 139 and 249\n",
       "Project Euler 18, 107 and 146\n",
-      "Compile Time Regular Expressions with Deterministic Finite Automaton\n",
-      "XTC: Topic TBD\n",
-      "Cocktail Happy Hour\n"
+      "January Gophers\n",
+      "Code Project Hackathon (FreeCodeCamp Themed)\n",
+      "CREST/PWL Special Event\n"
      ]
     }
    ],
    "source": [
     "# extract titles\n",
-    "regex = \"[0-9]*\"\n",
     "titles = browser.find_elements_by_class_name(\"eventCardHead--title\")\n",
     "for title in titles:\n",
     "    print(title.text)"
@@ -142,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "99"
+       "35"
       ]
      },
      "execution_count": 6,
@@ -151,14 +149,42 @@
     }
    ],
    "source": [
+    "len(titles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# parse titles and retrieve the problems' numbers\n",
+    "regex = \"[0-9]*\"\n",
     "def parse_title(title):\n",
     "    \"\"\"Returns the 3 problems contained in title.\"\"\"\n",
-    "    return [int(s) for s in re.findall(regex, title) if s]\n",
+    "    return [int(s) for s in re.findall(regex, title) if s and 'Project' in title]\n",
     "\n",
     "problems = [parse_title(t.text) for t in titles]\n",
-    "browser.close()  # close browser\n",
-    "\n",
+    "browser.close()  # close browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "problems_flat = [nr for l in problems for nr in l]\n",
     "len(problems_flat)"
    ]
@@ -174,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[83, 111, 602]"
+       "[90, 104, 238]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
